- WiP: Changing from local database to distinguish processed and !processed messages to using IMAP by moving processed messages away to another folder. - Added logs directory for later use.

--- a/.env.example
+++ b/.env.example
@@ -10,8 +10,6 @@ IMAP_CERT_ALLOW_OTHER=off
 IMAP_CERT_FILE=
 IMAP_KEY_FILE=
 
-# A.3) Search folder
+# A.3) Source and destination folders
 IMAP_SEARCH_FOLDER=INBOX
-
-# A.4) Behaviour
-IMAP_DELETE_MAIL_WHEN_PROCESSED=False
+IMAP_PROCESSED_FOLDER=ProcessedTimelineCSV
