- Added user to timespan - taken from the email's sender string. - New config option 'imap_move_processed_messages' (on/off). - Logic for moving processed messages to another folder added. - Closing the IMAP connection at the end added. - Storage folder added (instead of the 'db' folder from earlier today). -

--- a/.env.example
+++ b/.env.example
@@ -12,4 +12,5 @@ IMAP_KEY_FILE=
 
 # A.3) Source and destination folders
 IMAP_SEARCH_FOLDER=INBOX
+IMAP_MOVE_PROCESSED_MESSAGES=on
 IMAP_PROCESSED_FOLDER=ProcessedTimelineCSV
