- Added config option 'TIMESPANS_ADD_EACH_ID_ONLY_ONCE' (on/off)

--- a/.env.example
+++ b/.env.example
@@ -14,3 +14,7 @@ IMAP_KEY_FILE=
 IMAP_SEARCH_FOLDER=INBOX
 IMAP_MOVE_PROCESSED_MESSAGES=on
 IMAP_PROCESSED_FOLDER=ProcessedTimelineCSV
+
+
+# B) Timespans
+TIMESPANS_ADD_EACH_ID_ONLY_ONCE=on
