- WiP: backend plugins are introduced

--- a/.env.example
+++ b/.env.example
@@ -18,3 +18,8 @@ IMAP_PROCESSED_FOLDER=ProcessedTimelineCSV
 
 # B) Timespans
 TIMESPANS_ADD_EACH_ID_ONLY_ONCE=on
+
+
+# C) Backend
+BACKEND_MODULE=lib.backends.printer_example
+BACKEND_CLASS=PrinterExample
