- Instance needs an instance again (no more static calls) to have it remember the env_filename [that is used by both read() and get()]. - Added section for Backend-specific config options.

--- a/.env.example
+++ b/.env.example
@@ -20,6 +20,9 @@ IMAP_PROCESSED_FOLDER=ProcessedTimelineCSV
 TIMESPANS_ADD_EACH_ID_ONLY_ONCE=on
 
 
-# C) Backend
+# C) Backend choice
 BACKEND_MODULE=lib.backends.printer_example
 BACKEND_CLASS=PrinterExample
+
+# D) Optional: your Backend-specific options
+# …
