Renamed entity 'timespan' to 'timelines events' for more clarity (Timelines' vocabulary wins here).

--- a/.env.example
+++ b/.env.example
@@ -16,8 +16,8 @@ IMAP_MOVE_PROCESSED_MESSAGES=on
 IMAP_PROCESSED_FOLDER=ProcessedTimelineCSV
 
 
-# B) Timespans
-TIMESPANS_ADD_EACH_ID_ONLY_ONCE=on
+# B) Timelines' events
+TIMELINES_EVENTS_ADD_EACH_ID_ONLY_ONCE=on
 
 
 # C) Backend choice
