- Removed feature to use own certs. Never worked as advertised to this point. - .env.example simplified and with newly coming feature 'ENABLE_RECEIPTS_TO_SENDER'

--- a/.env.example
+++ b/.env.example
@@ -1,28 +1,29 @@
 # A) IMAP (the key file currently needs to be without a passphrase, see README.md)
 
-# A.1) IMAP SSL Connection (to port 993)
-IMAP_HOST=imap.example.com
-IMAP_USERNAME=username
-IMAP_PASSWORD=password
+## SSL Connection (port is 993)
+IMAP_HOST=[!]
+IMAP_USERNAME=[!]
+IMAP_PASSWORD=[!]
 
-# A.2) Allow self-signed or 3rd party certificate
-IMAP_CERT_ALLOW_OTHER=off
-IMAP_CERT_FILE=
-IMAP_KEY_FILE=
-
-# A.3) Source and destination folders
+## Search/archive folder, behaviour
 IMAP_SEARCH_FOLDER=INBOX
-IMAP_MOVE_PROCESSED_MESSAGES=on
-IMAP_PROCESSED_FOLDER=ProcessedTimelineCSV
+IMAP_MOVE_PROCESSED_MESSAGES=off
+IMAP_PROCESSED_FOLDER=
 
 
-# B) Timelines' events
-TIMELINES_EVENTS_ADD_EACH_ID_ONLY_ONCE=on
-
-
-# C) Backend choice
+# B) Backend
 BACKEND_MODULE=lib.backends.printer_example
 BACKEND_CLASS=PrinterExample
 
-# D) Optional: your Backend-specific options
-# …
+# C) SMTP (required by Receipt feature)
+SMTP_HOST=[!]
+SMTP_USERNAME=[!]
+SMTP_PASSWORD=[!]
+
+
+# D) Feature 'Receipts'
+ENABLE_RECEIPTS_TO_SENDER=on
+
+
+# E) Feature 'Event duplicate detection'
+TIMELINES_EVENTS_ADD_EACH_ID_ONLY_ONCE=on
