--- a/example.env
+++ b/example.env
@@ -22,8 +22,9 @@ SMTP_PASSWORD=[!]
 
 
 # D) Feature 'Receipts'
-ENABLE_RECEIPTS_TO_SENDER=on
+RECEIPT_TO_SENDER=on
+RECEIPT_COPY_TO_ADDRESSES=
 
 
-# E) Feature 'Event duplicate detection'
-TIMELINES_EVENTS_ADD_EACH_ID_ONLY_ONCE=on
+# E) Feature 'Event duplicate detection' - currently not functional, you can do duplicate detection in your backend or plugin
+#TIMELINES_EVENTS_ADD_EACH_ID_ONLY_ONCE=on
