[WiP] Worked on receipt feature

--- a/example.env
+++ b/example.env
@@ -23,6 +23,7 @@ SMTP_PASSWORD=[!]
 
 # D) Feature 'Receipts'
 RECEIPT_TO_SENDER=on
+RECEIPT_SENDER_ADDRESS=timelines@example.com
 RECEIPT_COPY_TO_ADDRESSES=
 
 
