Duplicate Detection is back, the .env option was renamed from 'TIMELINES_EVENTS_ADD_EACH_ID_ONLY_ONCE' to more "domainy" 'TIMELINES_EVENTS_DUPLICATE_DETECTION'. Was previously deactivated because of a badly written (conflicting) backend plugin that needed fixing before this could be re-enabled.

--- a/example.env
+++ b/example.env
@@ -26,5 +26,5 @@ RECEIPT_SENDER_ADDRESS=timelines@example.com
 RECEIPT_COPY_TO_ADDRESSES=
 
 
-# E) Feature 'Event duplicate detection' - currently not functional, you can do duplicate detection in your backend or plugin
-#TIMELINES_EVENTS_ADD_EACH_ID_ONLY_ONCE=on
+# E) Feature 'Event duplicate detection'
+TIMELINES_EVENTS_DUPLICATE_DETECTION=on
